--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=hhttps://pump-backend-xn6u.onrender.com/api
 JWT_SECRET=yourSuperSecretKey123
-
