--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
+    "@types/react-day-picker": "^5.2.1",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
